--- a/package.json
+++ b/package.json
@@ -9,30 +9,33 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.0",
+    "@auth/nextjs": "^0.0.0-380f8d56",
+    "@hookform/resolvers": "^5.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "lucide-react": "^0.303.0",
-    "react-hook-form": "^7.48.2",
-    "react-hot-toast": "^2.4.1",
+    "lucide-react": "^0.548.0",
+    "next": "^16.0.0",
+    "next-auth": "^4.24.12",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.65.0",
+    "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
+    "zod": "^4.1.12",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "babel-plugin-react-compiler": "1.0.0",
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/qrcode": "^1.5.5",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
-    "prisma": "^5.7.1"
+    "prisma": "^5.7.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
