--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
     "next": "^16.0.0",
     "next-auth": "^4.24.12",
@@ -22,6 +23,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.12",
