cloudinary config and profile image upload endpont added

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.0.0",
     "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
